[package]
name = "lpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive_table_view = "0.14.0"
cursive_tree_view = "0.8.0"
procfs = "0.15.1"
rand = "0.8.5"
sysinfo = "0.28.4"
toml = "0.7.3"
pad = "0.1.6"

[dependencies.tokio]
version = "1.27.0"
features = ["full"]

[dependencies.cursive]
version = "0.20.0"
features = ["toml"]
